--- a/package/templates/env.rc.j2
+++ b/package/templates/env.rc.j2
@@ -2,4 +2,4 @@ source /etc/profile
 export KYLIN_HOME={{install_dir}}/latest
 export HIVE_CONF=/usr/hdp/current/hive-client/conf
 export HCAT_HOME=/usr/hdp/{{hdp_version}}/hive-hcatalog
-export JAVA_HOME='/usr/jdk64/default'
+export JAVA_HOME='/usr/jdk64/jdk1.8.0_112'
