--- a/package/templates/env.rc.j2
+++ b/package/templates/env.rc.j2
@@ -3,3 +3,4 @@ export KYLIN_HOME={{install_dir}}/latest
 export HIVE_CONF=/usr/hdp/current/hive-client/conf
 export HCAT_HOME=/usr/hdp/{{hdp_version}}/hive-hcatalog
 export JAVA_HOME='/usr/jdk64/jdk1.8.0_112'
+export SPARK_HOME={{install_dir}}/latest/spark
